--- a/index.html
+++ b/index.html
@@ -6,28 +6,31 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
 </head>
-<body>
-    <h1 id = "Webtitle" style="color: blue;">
-        Title
+<body style="background-color: wheat;">
+<div>
+    <h1 id = "Webtitle" style="color: lightcoral;">
+        Resume
     </h1>
+</div>
 
-<div class="container">
-    <p id="first" class="redtxt">
-        paragraph
+<div>
+    <p id="first" class="text">
+        ชื่อ : นายพงศ์พศุตม์ บุญดี <br>
+        ชื่อเล่น : ต้า <br>
+        คณะ : IT <br>
+        รหัสนักศึกษา : 66070122
     </p>
 </div>
 
-    <p class="redtxt">
-        paragraph
+    <p class="text">
+        Hello my name is Pongpasut Boondee. Now I'm doing ITF LAB on 20/10/66 <br>
+        I'm studying at <span class="big">KMITL </span> <br>
+        I'm study in Faculty of <span class="big">Information Technology</span> Technology>
     </p>
 
-
-    <p id="third">
-        <span class="big">Hello</span> world
-    </p>
-
-
-    <img src="" alt="">>
-
+<div class="img">
+    <img src="it.jpg" alt="">>
+</div>
+<a class=big href="https://www.kmitl.ac.th/">KMITL</a>
 </body>
 </html></html>
